tests/snapshots/run_wpt_conformance__trtx_quantized_element-wise_binary_min.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "qdq_subgraph.https.any.js",
    "quantized element-wise binary min",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: Failed to get dimensions for tensor 0 in min: Could not get dimensions from Tensor \"(Unnamed Layer* 32) [ElementWise]_output\"\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f32[2, 2];\n  }\n\n  consts {\n    operand_0: i8[1, 1] @bytes([128]);\n    operand_2: f32[1, 1] @bytes([224, 169, 175, 62]);\n    operand_3: f32[1, 1] @bytes([224, 169, 175, 62]);\n    operand_4: f32[1, 1] @bytes([224, 169, 175, 62]);\n    operand_5: i8[1, 1] @bytes([128]);\n    operand_6: i8[1, 1] @bytes([128]);\n    operand_7: i8[2, 2] @bytes([12, 24, 35, 11]);\n  }\n\n  nodes {\n    [operand_8] = quantizeLinear(inputA, operand_3, operand_5, label=\"\");\n    [operand_9] = dequantizeLinear(operand_8, operand_3, operand_5, label=\"\");\n    [operand_10] = dequantizeLinear(operand_7, operand_4, operand_0, label=\"\");\n    [operand_11] = min(operand_9, operand_10, label=\"\");\n    [operand_12] = quantizeLinear(operand_11, operand_2, operand_6, label=\"\");\n    [output] = dequantizeLinear(operand_12, operand_2, operand_6, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
