tests/snapshots/run_wpt_conformance__trtx_quantized_element-wise_binary_mul.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized element-wise binary mul, trtx
 qdq_subgraph :: quantized element-wise binary mul: index 0: actual=0 expected=43.529415 ulp=1110318623 tolerance=16
  inputs: inputA: [49.1112174987793, 11.907459259033203, 21.115795135498047, 70.7490005493164]; inputAScale: [0.3921568859368563] (constant); inputAZeroPoint: [16] (constant); inputB: [21, 24, 8, 13] (constant); inputBScale: [0.3921568859368563] (constant); inputBZeroPoint: [16] (constant); outputScale: [0.3921568859368563] (constant); outputZeroPoint: [16] (constant)
  expected output: [43.529415, 36.862747, -56.470592, -51.372555]
  actual output: [0, 0, 0, 0]
  expected output full nd:
(shape [2, 2])
  [43.529415, 36.862747]
  [-56.470592, -51.372555]
  actual output full nd:
(shape [2, 2])
  [0, 0]
  [0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 2];
  }

  consts {
    operand_1: f32[1, 1] @bytes([202, 200, 200, 62]);
    operand_2: i8[1, 1] @bytes([16]);
    operand_3: i8[2, 2] @bytes([21, 24, 8, 13]);
    operand_4: f32[1, 1] @bytes([202, 200, 200, 62]);
    operand_5: i8[1, 1] @bytes([16]);
    operand_6: f32[1, 1] @bytes([202, 200, 200, 62]);
    operand_7: i8[1, 1] @bytes([16]);
  }

  nodes {
    [operand_8] = quantizeLinear(inputA, operand_1, operand_2, label="");
    [operand_9] = dequantizeLinear(operand_8, operand_1, operand_2, label="");
    [operand_10] = dequantizeLinear(operand_3, operand_4, operand_5, label="");
    [operand_11] = mul(operand_9, operand_10, label="");
    [operand_12] = quantizeLinear(operand_11, operand_6, operand_7, label="");
    [output] = dequantizeLinear(operand_12, operand_6, operand_7, label="");
  }

  outputs { output; }
}
