tests/snapshots/run_wpt_conformance__trtx_quantized_element-wise_binary_sub.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized element-wise binary sub, trtx
 qdq_subgraph :: quantized element-wise binary sub: index 0: actual=0 expected=4.319595 ulp=1082800671 tolerance=16
  inputs: inputA: [15.57776927947998, -62.7008056640625, 82.55709075927734, -74.90638732910156]; inputAScale: [0.617084980010986] (constant); inputAZeroPoint: [120] (constant); inputB: [12, 9, 2, 43] (constant); inputBScale: [0.617084980010986] (constant); inputBZeroPoint: [120] (constant); outputScale: [0.617084980010986] (constant); outputZeroPoint: [120] (constant)
  expected output: [4.319595, 4.319595, 4.319595, -27.15174]
  actual output: [0, 0, 0, 0]
  expected output full nd:
(shape [2, 2])
  [4.319595, 4.319595]
  [4.319595, -27.15174]
  actual output full nd:
(shape [2, 2])
  [0, 0]
  [0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 2];
  }

  consts {
    operand_1: f32[1, 1] @bytes([72, 249, 29, 63]);
    operand_2: i8[1, 1] @bytes([120]);
    operand_3: i8[2, 2] @bytes([12, 9, 2, 43]);
    operand_4: f32[1, 1] @bytes([72, 249, 29, 63]);
    operand_5: i8[1, 1] @bytes([120]);
    operand_6: f32[1, 1] @bytes([72, 249, 29, 63]);
    operand_7: i8[1, 1] @bytes([120]);
  }

  nodes {
    [operand_8] = quantizeLinear(inputA, operand_1, operand_2, label="");
    [operand_9] = dequantizeLinear(operand_8, operand_1, operand_2, label="");
    [operand_10] = dequantizeLinear(operand_3, operand_4, operand_5, label="");
    [operand_11] = sub(operand_9, operand_10, label="");
    [operand_12] = quantizeLinear(operand_11, operand_6, operand_7, label="");
    [output] = dequantizeLinear(operand_12, operand_6, operand_7, label="");
  }

  outputs { output; }
}
