tests/snapshots/run_wpt_conformance__trtx_quantized_element-wise_logical_greater.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized element-wise logical greater, trtx
 Failed to build graph: graph conversion failed for trtx: Failed to get dimensions for tensor 0 in greater: Could not get dimensions from Tensor "(Unnamed Layer* 28) [ElementWise]_output"

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 2];
  }

  consts {
    operand_1: i8[2, 2] @bytes([249, 2, 2, 30]);
    operand_2: f32[1, 1] @bytes([224, 169, 175, 62]);
    operand_3: i8[1, 1] @bytes([0]);
  }

  nodes {
    [operand_4] = quantizeLinear(inputA, operand_2, operand_3, label="");
    [operand_5] = dequantizeLinear(operand_4, operand_2, operand_3, label="");
    [operand_6] = dequantizeLinear(operand_1, operand_2, operand_3, label="");
    [operand_7] = greater(operand_5, operand_6, label="");
    [output] = cast(operand_7, label="");
  }

  outputs { output; }
}
