tests/snapshots/run_wpt_conformance__trtx_quantized_element-wise_logical_greaterOrEqual.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized element-wise logical greaterOrEqual, trtx
 qdq_subgraph :: quantized element-wise logical greaterOrEqual: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [-2.549168109893799, 0.794857501983643, 8.413617134094238, 6.108623504638672]; inputB: [-7, 2, 2, 30] (constant); scale: [0.343092918395996] (constant); zeroPoint: [0] (constant)
  expected output: [1, 1, 1, 0]
  actual output: [0, 1, 1, 1]
  expected output full nd:
(shape [2, 2])
  [1, 1]
  [1, 0]
  actual output full nd:
(shape [2, 2])
  [0, 1]
  [1, 1]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 2];
  }

  consts {
    operand_1: i8[2, 2] @bytes([249, 2, 2, 30]);
    operand_2: f32[1, 1] @bytes([224, 169, 175, 62]);
    operand_3: i8[1, 1] @bytes([0]);
  }

  nodes {
    [operand_4] = quantizeLinear(inputA, operand_2, operand_3, label="");
    [operand_5] = dequantizeLinear(operand_4, operand_2, operand_3, label="");
    [operand_6] = dequantizeLinear(operand_1, operand_2, operand_3, label="");
    [operand_7] = greaterOrEqual(operand_5, operand_6, label="");
    [output] = cast(operand_7, label="");
  }

  outputs { output; }
}
