tests/snapshots/run_wpt_conformance__trtx_quantized_element-wise_logical_lesserOrEqual.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "qdq_subgraph.https.any.js",
    "quantized element-wise logical lesserOrEqual",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: Failed to get dimensions for tensor 0 in lesserOrEqual: Could not get dimensions from Tensor \"(Unnamed Layer* 28) [ElementWise]_output\"\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f32[2, 2];\n  }\n\n  consts {\n    operand_0: f32[1, 1] @bytes([224, 169, 175, 62]);\n    operand_1: i8[2, 2] @bytes([249, 2, 2, 30]);\n    operand_2: i8[1, 1] @bytes([0]);\n  }\n\n  nodes {\n    [operand_4] = quantizeLinear(inputA, operand_0, operand_2, label=\"\");\n    [operand_5] = dequantizeLinear(operand_4, operand_0, operand_2, label=\"\");\n    [operand_6] = dequantizeLinear(operand_1, operand_0, operand_2, label=\"\");\n    [operand_7] = lesserOrEqual(operand_5, operand_6, label=\"\");\n    [output] = cast(operand_7, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
