tests/snapshots/run_wpt_conformance__trtx_quantized_elu.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized elu, trtx
 qdq_subgraph :: quantized elu: index 0: actual=0 expected=0.49803925 ulp=1056898816 tolerance=18
  inputs: input: [1.6811466217041016, 0.0479511022567749, 0.33355462551116943, -0.1988269537687301, -0.0041167140007019, -0.0634240251779556]; inputScale: [0.003921568859368563] (constant); inputZeroPoint: [0] (constant); outputScale: [0.003921568859368563] (constant); outputZeroPoint: [0] (constant)
  expected output: [0.49803925, 0.04705883, 0.33333334, -0.18039216, -0.003921569, -0.0627451]
  actual output: [0, 0, 0, 0, 0, 0]
  expected output full nd:
(shape [2, 3])
  [0.49803925, 0.04705883, 0.33333334]
  [-0.18039216, -0.003921569, -0.0627451]
  actual output full nd:
(shape [2, 3])
  [0, 0, 0]
  [0, 0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    input: f32[2, 3];
  }

  consts {
    operand_1: f32[1, 1] @bytes([129, 128, 128, 59]);
    operand_2: i8[1, 1] @bytes([0]);
    operand_3: f32[1, 1] @bytes([129, 128, 128, 59]);
    operand_4: i8[1, 1] @bytes([0]);
  }

  nodes {
    [operand_5] = quantizeLinear(input, operand_1, operand_2, label="");
    [operand_6] = dequantizeLinear(operand_5, operand_1, operand_2, label="");
    [operand_7] = elu(operand_6, alpha=1.0, label="");
    [operand_8] = quantizeLinear(operand_7, operand_3, operand_4, label="");
    [output] = dequantizeLinear(operand_8, operand_3, operand_4, label="");
  }

  outputs { output; }
}
