tests/snapshots/run_wpt_conformance__trtx_quantized_gather.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "qdq_subgraph.https.any.js",
    "quantized gather",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: tensor dimensions: Could not get dimensions from Tensor \"(Unnamed Layer* 35) [Gather]_output\"\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    input: f32[2, 3];\n  }\n\n  consts {\n    operand_0: i8[1] @bytes([128]);\n    operand_2: i8[1, 1] @bytes([128]);\n    operand_3: f32[1] @bytes([224, 169, 175, 62]);\n    operand_4: f32[1, 1] @bytes([224, 169, 175, 62]);\n    operand_5: i32[] @bytes([1, 0, 0, 0]);\n  }\n\n  nodes {\n    [operand_6] = quantizeLinear(input, operand_4, operand_2, label=\"\");\n    [operand_7] = dequantizeLinear(operand_6, operand_4, operand_2, label=\"\");\n    [operand_8] = gather(operand_7, operand_5, axis=0, label=\"\");\n    [operand_9] = quantizeLinear(operand_8, operand_3, operand_0, label=\"\");\n    [output] = dequantizeLinear(operand_9, operand_3, operand_0, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
